[package]
name = "xm_player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
wasapi = "0.12.0"

[lib]
name = "xm_player"
path = "src/lib.rs"

[[bin]]
name = "xm_player"
path = "src/bin.rs"

[profile.release]
# debug = true
